--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
 Flask==2.3.2
-Werkzeug==2.3.6
-gunicorn==20.1.0
-python-dotenv==1.0.0
-SQLAlchemy==2.0.19
-psycopg2-binary==2.9.6
 Flask-SQLAlchemy==3.0.5
 Flask-Login==0.6.2
-email-validator==2.0.0
-twilio==8.5.0
-sendgrid==6.10.0
-celery==5.3.1
-redis==4.6.0
+SQLAlchemy==2.0.19
+Werkzeug==2.3.6
+click==8.1.6
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+psycopg2-binary==2.9.7
+gunicorn==21.2.0
+python-dotenv==1.0.0
+greenlet==2.0.2
+typing_extensions==4.7.1
