--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,13 @@ numpy==1.24.3
 pandas==2.0.3
 openpyxl==3.1.2
 xlsxwriter==3.1.2
+openai==0.27.8
+requests==2.31.0
+beautifulsoup4==4.12.2
+reportlab==4.0.4
+redis==4.6.0
+pydub==0.25.1
+yt-dlp==2023.7.6
+srt==3.5.3
+webvtt-py==0.4.6
+lxml==4.9.3
